changes made to friday-project

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,16 @@
       <p>the project is my first project the goal being creating a web page that
          entails what i have learned in Moringa Schoolthe languages i used
          include HTML and CSS</p>
+         <a href="https://github.com/DanKosgei/my-first-webpage"></a>
       <li>cupcake shop</li>
       <p>this project is about creating a site for a shop named CupCake which is
-         to advertise their products online</p>
+         to advertise their products online, the languages used is HTNL and CSS
+       </p>
+         <a href="https://github.com/DanKosgei/CupCake"></a>
       <li>cookie-recipe</li>
+      <p>This recipe is from my dad and they are a favorite among friends and
+         family. The secret ingredient is the coconut! Be warned, these will fly
+          off of the plate! the languages used are HTML and CSS</p>
 
   </body>
 </html>
