--- a/portfolio.html
+++ b/portfolio.html
@@ -14,20 +14,35 @@
       <p>the project is my first project the goal being creating a web page that
          entails what i have learned in Moringa Schoolthe languages i used
          include HTML and CSS
-          <a href="https://github.com/DanKosgei/my-first-webpage"></a></p>
+          <a href="https://github.com/DanKosgei/my-first-webpage">my-first-webpage</a></p>
 
       <li>cupcake shop</li>
       <p>this project is about creating a site for a shop named CupCake which is
          to advertise their products online, the languages used is HTNL and CSS
-         <a href="https://github.com/DanKosgei/CupCake"></a>
+         <a href="https://github.com/DanKosgei/CupCake">CupCake</a>
        </p>
 
       <li>cookie-recipe</li>
       <p>This recipe is from my dad and they are a favorite among friends and
          family. The secret ingredient is the coconut! Be warned, these will fly
-          off of the plate! the languages used are HTML and CSS
-        https://github.com/DanKosgei/cookie-recipe</p>
-    
+          off of the plate! the languages used are HTML and CSS</p>
+           <a href="https://github.com/DanKosgei/cookie-recipe">cookie-recipe</a>
+    <h3>About me</h3>
+    <ul>
+      <li>Background</li>
+      <p>i come from Eldoret,
+         Uasin Gishu county,
+          Kenya</p>
+      <li>Education background</li>
+      <p>2014-Present:
+         Bachelors Degree
+         Kabarak University</p>
+      <p>2010-2013:
+         Arise and Shine High school</p>
+      <p>2001-2009:
+         Chebororwa Primary School</p>
+    </ul>
+
 
   </body>
 </html>
