--- a/portfolio.html
+++ b/portfolio.html
@@ -33,14 +33,27 @@
       <p>i come from Eldoret,
          Uasin Gishu county,
           Kenya</p>
+
       <li>Education background</li>
       <p>2014-Present:
          Bachelors Degree
          Kabarak University</p>
-      <p>2010-2013:
+        <p>2010-2013:
          Arise and Shine High school</p>
       <p>2001-2009:
          Chebororwa Primary School</p>
+    <h4>HOBBIES</h4>
+    <ul>
+      <li>Using computer</li>
+      <li>watching movies</li>
+      <li>listening to music</li>
+      <li>hanging out with friends</li>
+    <h5>SKILLS</h5>
+    <ul>
+      <li>Networking</li>
+      <li>Digital Marketing</li>
+    </ul>
+    </ul>
     </ul>
 
 
