changes made to friday-project

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <link href="friday-project/portfolio.css" rel="stylesheet" type="text/css
     <title>MY PORTFOLIO</title>
   </head>
-  <body>
+  <body bgcolor="lightblue">
     <h1>DAN KOSGEI</h1>
 
     <h2>Projects done</h2>
+    <div style="color:#0000FF">
     <p>Here is the projects i have done during my few days in Moringa School</p>
+  </div>
     <ul>
       <li>my-first webpage project</li>
       <p>the project is my first project the goal being creating a web page that
@@ -27,12 +29,12 @@
          family. The secret ingredient is the coconut! Be warned, these will fly
           off of the plate! the languages used are HTML and CSS</p>
            <a href="https://github.com/DanKosgei/cookie-recipe">cookie-recipe</a>
-    <h3>About me</h3>
+    <h3>ABOUT ME</h3>
     <ul>
       <li>Background</li>
-      <p>i come from Eldoret,
-         Uasin Gishu county,
-          Kenya</p>
+      <p>i was born in the year 1995 in the village known as Moiben Eldoret,
+        Uasin Gishu county,i was raised up in a humble background facing various
+        challenges like family and hardship areas</p>
 
       <li>Education background</li>
       <p>2014-Present:
@@ -42,12 +44,14 @@
          Arise and Shine High school</p>
       <p>2001-2009:
          Chebororwa Primary School</p>
+
     <h4>HOBBIES</h4>
     <ul>
       <li>Using computer</li>
       <li>watching movies</li>
       <li>listening to music</li>
       <li>hanging out with friends</li>
+
     <h5>SKILLS</h5>
     <ul>
       <li>Networking</li>
