changes made to friday-project

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="friday-project/portfolio.css" rel="stylesheet" type="text/css
+
     <title>MY PORTFOLIO</title>
+< link href="portfolio.css" rel="stylesheet" type="text/css
   </head>
   <body bgcolor="lightblue">
     <h1>DAN KOSGEI</h1>
+    <img src="images/dan.jpg" alt="just me" style="width:304px;height:228px;">
 
     <h2>Projects done</h2>
     <div style="color:#0000FF">
@@ -56,10 +58,19 @@
     <ul>
       <li>Networking</li>
       <li>Digital Marketing</li>
-    </ul>
-    </ul>
-    </ul>
 
+    <h6>CONTACTS</h6>
+    <ul>
+      <li>Phone contacts</li>
+      <p>+254704413160</p>
+      <li>twitter</li>
+      <p>twit me; Dan_Kosgei</p>
+      <li>facebook</li>
+      <p>reach me; Dan Kosgei</p>
+    </ul>
+    </ul>
+    </ul>
+    </ul>
 
   </body>
 </html>
