changes made to friday-project

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"
+< link href="portfolio.css" rel="stylesheet" type="text/css">
 
     <title>MY PORTFOLIO</title>
-< link href="portfolio.css" rel="stylesheet" type="text/css
+
   </head>
   <body bgcolor="lightblue">
     <h1>DAN KOSGEI</h1>
-    <img src="images/dan.jpg" alt="just me" style="width:304px;height:228px;">
+    <img src="images/dan.jpg" alt="just me" style="width:400px;height:400Spx;">
 
     <h2>Projects done</h2>
     <div style="color:#0000FF">
-    <p>Here is the projects i have done during my few days in Moringa School</p>
+    <p class="flashy">Here is the projects i have done during my few days in Moringa School</p>
   </div>
     <ul>
       <li>my-first webpage project</li>
