changes made to friday-project

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,34 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8"
-< link href="portfolio.css" rel="stylesheet" type="text/css">
+< link href="css/portfolio.css" rel="stylesheet" type="text/css">
 
     <title>MY PORTFOLIO</title>
 
   </head>
   <body bgcolor="lightblue">
     <h1>DAN KOSGEI</h1>
-    <img src="images/dan.jpg" alt="just me" style="width:400px;height:400Spx;">
+    <img src="images/dan.jpg" alt="just me" style="width:200px;height:200px;">
 
     <h2>Projects done</h2>
     <div style="color:#0000FF">
-    <p class="flashy">Here is the projects i have done during my few days in Moringa School</p>
+    <p style="color:blue;"style="text-align:center;">Here is the projects i have
+       done during my few days in Moringa School</p>
+
   </div>
     <ul>
-      <li>my-first webpage project</li>
-      <p>the project is my first project the goal being creating a web page that
-         entails what i have learned in Moringa Schoolthe languages i used
-         include HTML and CSS
+      <li><span style="color:green">My-first webpage project</li>
+      <p>the project is my first project the goal
+         being creating a web page that entails what i have learned in Moringa
+          Schoolthe languages i used include HTML and CSS
           <a href="https://github.com/DanKosgei/my-first-webpage">my-first-webpage</a></p>
 
-      <li>cupcake shop</li>
-      <p>this project is about creating a site for a shop named CupCake which is
-         to advertise their products online, the languages used is HTNL and CSS
+      <li><span style="color:red">Cupcake shop</li>
+      <p>this project is about creating a site for a
+         shop named CupCake which isto advertise their products online, the
+         languages used is HTNL and CSS
          <a href="https://github.com/DanKosgei/CupCake">CupCake</a>
        </p>
 
-      <li>cookie-recipe</li>
-      <p>This recipe is from my dad and they are a favorite among friends and
+      <li><span style="color:red">Cookie-recipe</li>
+      <p>this recipe is from my dad and they are a
+         favorite among friends and
          family. The secret ingredient is the coconut! Be warned, these will fly
           off of the plate! the languages used are HTML and CSS</p>
            <a href="https://github.com/DanKosgei/cookie-recipe">cookie-recipe</a>
@@ -48,31 +52,28 @@
          Arise and Shine High school</p>
       <p>2001-2009:
          Chebororwa Primary School</p>
-
+      <ul/>
     <h4>HOBBIES</h4>
     <ul>
-      <li>Using computer</li>
-      <li>watching movies</li>
-      <li>listening to music</li>
-      <li>hanging out with friends</li>
-
-    <h5>SKILLS</h5>
+    <li>Using computer</li>
+    <li>watching movies</li>
+    <li>listening to music</li>
+    <li>hanging out with friends</li>
+  </ul>
+  <h5>SKILLS</h5>
     <ul>
-      <li>Networking</li>
-      <li>Digital Marketing</li>
+    <li>Networking</li>
+    <li>Digital Marketing</li>
+  </ul>
 
     <h6>CONTACTS</h6>
     <ul>
-      <li>Phone contacts</li>
-      <p>+254704413160</p>
-      <li>twitter</li>
-      <p>twit me; Dan_Kosgei</p>
-      <li>facebook</li>
-      <p>reach me; Dan Kosgei</p>
+    <li>Phone contacts</li>
+    <p>+254704413160</p>
+    <li>twitter</li>
+    <p>twit me; Dan_Kosgei</p>
+    <li>facebook</li>
+    <p>reach me; Dan Kosgei</p>
     </ul>
-    </ul>
-    </ul>
-    </ul>
-
   </body>
 </html>
