changes made to friday-project

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,14 +24,14 @@
           Schoolthe languages i used include HTML and CSS
           <a href="https://github.com/DanKosgei/my-first-webpage">my-first-webpage</a></p>
 
-      <li><span style="color:red">Cupcake shop</li>
+      <li><span style="color:green">Cupcake shop</li>
       <p>this project is about creating a site for a
          shop named CupCake which isto advertise their products online, the
          languages used is HTNL and CSS
          <a href="https://github.com/DanKosgei/CupCake">CupCake</a>
        </p>
 
-      <li><span style="color:red">Cookie-recipe</li>
+      <li><span style="color:green">Cookie-recipe</li>
       <p>this recipe is from my dad and they are a
          favorite among friends and
          family. The secret ingredient is the coconut! Be warned, these will fly
