changes made to friday-project

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,11 +68,11 @@
 
     <h6>CONTACTS</h6>
     <ul>
-    <li>Phone contacts</li>
+    <li><span style="color:blue">Phone contacts</li>
     <p>+254704413160</p>
-    <li>twitter</li>
+    <li><span style="color:blue">twitter</li>
     <p>twit me; Dan_Kosgei</p>
-    <li>facebook</li>
+    <li><span style="color:blue">facebook</li>
     <p>reach me; Dan Kosgei</p>
     </ul>
   </body>
