changes made to friday-project

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,9 @@
 
     <title>MY PORTFOLIO</title>
 
-  </head>
+</head>
   <body bgcolor="lightblue">
-    <h1>DAN KOSGEI</h1>
+    <h1><font size="4" color="black">DAN KOSGEI</h1>
     <img src="images/dan.jpg" alt="just me" style="width:200px;height:200px;">
 
     <h2>Projects done</h2>
