changes made to friday-project

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,13 @@
     <title>MY PORTFOLIO</title>
 
 </head>
+<style>
+{
+  background: url(html/danko.jpg) no-repeat center center fixed;
+  background-size; cover;
+}
+
+</style>
   <body bgcolor="lightblue">
    <h1><font size="4" color="black">DAN KOSGEI</h1>
     <img src="images/dan.jpg" alt="just me" style="width:200px;height:200px;">
