--- a/index.html
+++ b/index.html
@@ -1,86 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"
-< link href="css/portfolio.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/styles.css" type="text/css">
+     <title>MY PORTFOLIO</title>
+  </head>
+  <nav class="topbar">
+			<header class="top-line">
+				<h1 class="name">Dan Kosgei</h1>
+				 <a class="contact-tab" href="contact.html" target="_blank">Contact</a>
+         <a class="portfolio-tab" href="portfolio.html" target="_blank">Portfolio</a>
+         <a class="projects-tab" href="projects.html" target="_blank">Projects</a>
+           <a class="about-tab" href="About.html" target="_blank">About</a>
+			</header>
+		</nav>
 
-    <title>MY PORTFOLIO</title>
+<img src="images/dan.jpg" alt="Swimming fish" style="width:200px;height:200px;">
 
-</head>
-<style>
-{
-  background: url(html/danko.jpg) no-repeat center center fixed;
-  background-size; cover;
-}
+  <aside class="connect-box">
+    <div class="row">
 
-</style>
-  <body bgcolor="lightblue">
-   <h1><font size="4" color="black">DAN KOSGEI</h1>
-    <img src="images/dan.jpg" alt="just me" style="width:200px;height:200px;">
 
-    <h2>Projects done</h2>
-    <div style="color:#0000FF">
-    <p style="color:blue;"style="text-align:center;">Here is the projects i have
-       done during my few days in Moringa School</p>
+					<h6 class="connect-header">Connect with Me</h6>
+					<div class="connect-img-box">
+						<div class="imgc1">
+							<a href="https://github.com/DanKosgei" target="_blank"><img class="connect-images" alt="github" src="images/github.png"></a>
+						</div>
+						<div class="imgc2">
+							<a href="https://www.linkedin.com/in/dan-kosgei-8060348b" target="_blank"><img class="connect-images" alt="linkedin" src="images/linkedin.png"></a>
+						</div>
+						<div class="imgc3">
+							<a href="https://twitter.com/dan_kosgei" target="_blank"><img class="connect-images" alt="twitter" src="images/twitter.png"></a>
+						</div>
+					</div>
+          </div>
+				</aside>
 
+    <section class="copyrightbar">
+			<div class="copyright">
+				<p>&#169;Copyright 2017 Dan Kosgei</p>
+			</div> <!-- End of copyright section -->
+		</section> <!-- End of copyrightbar div
   </div>
-    <ul>
-      <li><span style="color:green">My-first webpage project</li>
-      <p>the project is my first project the goal
-         being creating a web page that entails what i have learned in Moringa
-          Schoolthe languages i used include HTML and CSS
-          <a href="https://github.com/DanKosgei/my-first-webpage">my-first-webpage</a></p>
-
-      <li><span style="color:green">Cupcake shop</li>
-      <p>this project is about creating a site for a
-         shop named CupCake which isto advertise their products online, the
-         languages used is HTNL and CSS
-         <a href="https://github.com/DanKosgei/CupCake">CupCake</a>
-       </p>
-
-      <li><span style="color:green">Cookie-recipe</li>
-      <p>this recipe is from my dad and they are a
-         favorite among friends and
-         family. The secret ingredient is the coconut! Be warned, these will fly
-          off of the plate! the languages used are HTML and CSS</p>
-           <a href="https://github.com/DanKosgei/cookie-recipe">cookie-recipe</a>
-    <h3>ABOUT ME</h3>
-    <ul>
-      <li>Background</li>
-      <p>i was born in the year 1995 in the village known as Moiben Eldoret,
-        Uasin Gishu county,i was raised up in a humble background facing various
-        challenges like family and hardship areas</p>
-
-      <li>Education background</li>
-      <p>2014-Present:
-         Bachelors Degree
-         Kabarak University</p>
-        <p>2010-2013:
-         Arise and Shine High school</p>
-      <p>2001-2009:
-         Chebororwa Primary School</p>
-      <ul/>
-    <h4>HOBBIES</h4>
-    <ul>
-    <li>Using computer</li>
-    <li>watching movies</li>
-    <li>listening to music</li>
-    <li>hanging out with friends</li>
-  </ul>
-  <h5>SKILLS</h5>
-    <ul>
-    <li>Networking</li>
-    <li>Digital Marketing</li>
-  </ul>
-
-    <h6>CONTACTS</h6>
-    <ul>
-    <li><span style="color:blue">Phone contacts</li>
-    <p>+254704413160</p>
-    <li><span style="color:blue">twitter</li>
-    <p>twit me; Dan_Kosgei</p>
-    <li><span style="color:blue">facebook</li>
-    <p>reach me; Dan Kosgei</p>
-    </ul>
+  </div>
+    </div>
   </body>
 </html>
