--- a/About.html
+++ b/About.html
@@ -20,12 +20,7 @@
               <img class="profile-pic" alt="profile-pic" src="images/dan.jpg">
               <p>i was born in the year 1995 in the village known as Moiben Eldoret,
                 Uasin Gishu county,i was raised up in a humble background facing various
-                challenges like family and hardship areas
-              <br><br>
-              A few fun facts about me: I was a Lion Dancer for three years, part of a bowling team, high school varsity tennis player and choir.	Also, I am now a proud owner of a Sugar Glider with a name that is still in debate.
-              <br><br>
-              P.S. Hover over me and watch me do a trick.
-              </p>
+                challenges like family and hardship areas </p>
 
 
   <h3>Education background</h3>
