--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
     <section class="copyrightbar">
 			<div class="copyright">
 				<p>&#169;Copyright 2017 Dan Kosgei</p>
-			</div> <!-- End of copyright section -->
-		</section> <!-- End of copyrightbar div
+			</div>
+		</section>
+  <!-- End of copyright section -->
   </div>
   </div>
     </div>
