--- a/About.html
+++ b/About.html
@@ -2,25 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css">
     <title>my portfolio</title>
   </head>
   <body>
-    <nav class="topbar">
-			<header class="top-line">
-				<h1 class="name">Dan Kosgei</h1>
-				 <a class="contact-tab" href="contact.html" target="_blank">Contact</a>
-				 <a class="portfolio-tab" href="portfolio.html" target="_blank">Portfolio</a>
-				 <a class="about-tab" href="About.html" target="_blank">About</a>
-			</header>
+
 		</nav>
     <section class="midbar">
           <div class="container">
             <div class="about-me-box">
+
+
+
               <h1 class="about-me">About Me</h1>
-              <img class="profile-pic" alt="profile-pic" src="images/dan.jpg">
+              <img class="profile-pic" alt="profile-pic" src="images/dan.jpg" style="width:200px;height:200px;">
               <p>i was born in the year 1995 in the village known as Moiben Eldoret,
                 Uasin Gishu county,i was raised up in a humble background facing various
                 challenges like family and hardship areas </p>
+
+<div class="educ">
 
 
   <h3>Education background</h3>
@@ -31,20 +31,10 @@
      Arise and Shine High school</p>
   <p>2001-2009:
      Chebororwa Primary School</p>
-
-
+</div>
+  </section> <!-- End of portfolio box div -->
 
 
     </div>
-
-<h5>SKILLS</h5>
-<ul>
-<li>Networking</li>
-<li>Digital Marketing</li>
-</ul>
-  </section> <!-- End of portfolio box div -->
-</div>
-</div>
-
-  </body>
+  </div>
 </html>
