--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/sizing.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-	<body>
-	<!--
-	================================================
-	 Contains header, about, portfolio, and contact
-	================================================
-	-->
+	<body bgcolor="lightblue">
+
+
 		<nav class="topbar">
 			<header class="top-line">
 				<h1 class="name">Dan Kosgei</h1>
