added an images

--- a/projects.html
+++ b/projects.html
@@ -10,9 +10,10 @@
 
 
 
-          <h3>My-first webpage project</h3>
+          <h3>Anitas Kitchen</h3>
+          <img src="images/core.jpg" alt="" style="width:200px;height200px">
 
-              <a href="https://github.com/DanKosgei/my-first-webpage">my-first-webpage</a></p>
+              <a href="https://github.com/DanKosgei/kitchen-Anita">Anitas Kitchen</a></p>
 
           <h4>Cupcake shop</h4>
           <img src="images/cupshop.jpg" alt="" style="width:200px;height:200px">
